# gibbon-ghc

./: .dir-locals.el  README.md  gibbon-ghc.cabal  shell.nix
coredumps/: Bintree.dump-simpl  LinearBintree.dump-simpl  LinearPrim.dump-simpl  Prim.dump-simpl
src/: Bintree.hs  LinearBintree.hs  Main.hs
src/Gibbon/: IO.hs  LinearPrim.hs  Prim.hs
