cabal-version:      >= 1.10
name:               gibbon-ghc
version:            0.1.0.0
build-type:         Simple

executable gibbon-ghc
    main-is:             Main.hs
    -- other-modules:
    ghc-options:         -Wall -Wcompat -fdefer-typed-holes
    build-depends:       base >= 4.15 && < 4.16
    hs-source-dirs:      src
    default-language:    Haskell2010
    default-extensions:  BangPatterns
                         ScopedTypeVariables
