cabal-version:      >= 1.10
name:               gibbon-ghc
version:            0.1.0.0
build-type:         Simple

executable gibbon-ghc
    main-is:             Main.hs
    other-modules:       Bintree
                         LinearBintree
                         Gibbon.Prim
                         Gibbon.LinearPrim
                         -- Gibbon.IO
    ghc-options:         -Wall -Wcompat -fdefer-typed-holes
    -- ghc-options:         -prof -fprof-auto
    ghc-options:         -ddump-simpl -ddump-to-file
    build-depends:       base     >= 4.15 && < 4.16
                       -- , criterion
                       , deepseq
                       , time
                       , linear-base
    hs-source-dirs:      src
    default-language:    Haskell2010
    default-extensions:  BangPatterns
                         ScopedTypeVariables
